--- a/django_ngq/ngq_app/static/ngq_app/styles.css
+++ b/django_ngq/ngq_app/static/ngq_app/styles.css
@@ -103,6 +103,12 @@ nav a:hover {
     color: black;
 }
 /*input*/
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
 input[type=submit] {
     padding: 10px 20px;
     font-size: 16px;
