--- a/django_ngq/ngq_app/templates/ngq_app/results.html
+++ b/django_ngq/ngq_app/templates/ngq_app/results.html
@@ -154,6 +154,8 @@
                 const data = await response.json();
                 if (data.status === 'completed') {
                     document.getElementById('generation-status').innerText = "generation completed!"
+                    console.log("Generation Finished!")
+                    window.location.href = '/static_results';
                 }
             } catch (error) {
                 socket.close();
