minor adjustments pt 2

--- a/django_ngq/ngq_app/templates/ngq_app/results.html
+++ b/django_ngq/ngq_app/templates/ngq_app/results.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Results - Next-Gen QA</title>
+    <title>Loading Results - Next-Gen QA</title>
     <link rel="stylesheet" href="{% static 'ngq_app/styles.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -90,7 +90,7 @@
 
         // click regenerate button
         document.getElementById("regenerate-btn").addEventListener("click", () => {
-            window.open("/loading");
+            window.open("/results");
         });
 
         // click new url button
