--- a/django_ngq/ngq_app/static/ngq_app/styles.css
+++ b/django_ngq/ngq_app/static/ngq_app/styles.css
@@ -80,14 +80,16 @@ nav a:hover {
     flex-direction: column;
     align-items: center;
     gap: 10px;
+    width: 100%;
+    justify-items: left;
 }
 .hero input {
     padding: 10px;
     font-size: 16px;
-    width: 250%;
     border: 1px solid #ccc;
     border-radius: 10px;
     text-align: center;
+    width: 50px;
 }
 .hero button {
     padding: 10px 20px;
@@ -117,6 +119,7 @@ input[type=submit] {
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    width: 20%;
 }
 input[type=submit]:hover {
     background: #e8e8e8;
