--- a/django_ngq/ngq_app/templates/ngq_app/results.html
+++ b/django_ngq/ngq_app/templates/ngq_app/results.html
@@ -32,6 +32,7 @@
                 <ul id="breakdown-list">
                     <li>Buttons: <span id="buttons-count">Loading...</span></li>
                     <li>Links: <span id="links-count">Loading...</span></li>
+                    <li>Headers: <span id="headers-count">Loading...</span></li>
                     <li>Paragraphs: <span id="paragraphs-count">Loading...</span></li>
                     <li>Submit Fields: <span id="submit-fields-count">Loading...</span></li>
                     <li>Inputs Fields: <span id="input-fields-count">Loading...</span></li>
@@ -43,8 +44,8 @@
                 <p class="generated-count">
                     <span id="test-case-progress">Loading...</span> / <span id="test-case-total">Loading...</span>
                 </p>
-                <!-- generating test cases... | generation completed! -->
-                <p id="generation-status">generating test cases...</p>
+                <!-- scraping website... | generating test cases... | generation completed! -->
+                <p id="generation-status">scraping website...</p>
                 <div class="action-buttons">
                     <button id="print-btn">Print</button>
                     <button id="download-btn">Download CSV</button>
@@ -133,9 +134,10 @@
 
                 // Dynamically update statistics
                 document.getElementById('test-url').innerText = context.url;
-                document.getElementById('total-elements').innerText = context.elements_count;
+                document.getElementById('total-elements').innerText = context.accurate_elements_count;
                 document.getElementById('buttons-count').innerText = context.buttons_count;
                 document.getElementById('links-count').innerText = context.links_count;
+                document.getElementById('headers-count').innerText = context.headers_count;
                 document.getElementById('paragraphs-count').innerText = context.paragraphs_count;
                 document.getElementById('submit-fields-count').innerText = context.submit_fields_count;
                 document.getElementById('input-fields-count').innerText = context.input_fields_count;
@@ -148,6 +150,7 @@
         async function processResults() {
             try {
                 console.log("Generation Begins");
+                document.getElementById('generation-status').innerText = "generating test cases..."
                 const response = await fetch('/process_results',{
                     signal: stop_fetch.signal,
                 });
@@ -158,7 +161,7 @@
                     window.location.href = '/static_results';
                 }
             } catch (error) {
-                socket.close();
+                // socket.close();
                 console.log("Closing page and its functions");
                 const response = await fetch('/cancel_generation');
                 
@@ -176,6 +179,7 @@
         //// ON LOAD | ON UNLOAD ////
         window.onload = function() {
             // Start Scraping
+            // document.getElementById('generation-status').innerText = "scraping website..."
             processData();
         };
         window.onbeforeunload = function() {
