--- a/django_ngq/ngq_app/templates/ngq_app/results.html
+++ b/django_ngq/ngq_app/templates/ngq_app/results.html
@@ -13,6 +13,7 @@
     <!-- Navigation -->
     <nav>
         <div class="logo">
+            <span class="circle"></span> <!--logo placeholder-->
             <a href="/">Next-Gen QA</a>
         </div>
         <ul>
@@ -27,22 +28,22 @@
             <!-- Left column -->
             <!-- Loading... or double curly brackets-->
             <div class="info">
-                <p><strong>Test cases generated for:</strong> <span id="test-url">Loading...</span></p>
-                <p><strong>Total Elements Identified:</strong> <span id="total-elements">Loading...</span></p>
+                <p><strong>Test cases generated for:</strong> <span id="test-url"></span></p>
+                <p><strong>Total Elements Identified:</strong> <span id="total-elements"></span></p>
                 <ul id="breakdown-list">
-                    <li>Buttons: <span id="buttons-count">Loading...</span></li>
-                    <li>Links: <span id="links-count">Loading...</span></li>
-                    <li>Headers: <span id="headers-count">Loading...</span></li>
-                    <li>Paragraphs: <span id="paragraphs-count">Loading...</span></li>
-                    <li>Submit Fields: <span id="submit-fields-count">Loading...</span></li>
-                    <li>Inputs Fields: <span id="input-fields-count">Loading...</span></li>
+                    <li>Buttons: <span id="buttons-count"></span></li>
+                    <li>Links: <span id="links-count"></span></li>
+                    <li>Headers: <span id="headers-count"></span></li>
+                    <li>Paragraphs: <span id="paragraphs-count"></span></li>
+                    <li>Submit Fields: <span id="submit-fields-count"></span></li>
+                    <li>Inputs Fields: <span id="input-fields-count"></span></li>
                 </ul>
             </div>
 
             <!-- Right column-->
             <div class="test-case-summary">
                 <p class="generated-count">
-                    <span id="test-case-progress">Loading...</span> / <span id="test-case-total">Loading...</span>
+                    <span id="test-case-progress"></span> / <span id="test-case-total"></span>
                 </p>
                 <!-- scraping website... | generating test cases... | generation completed! -->
                 <p id="generation-status">scraping website...</p>
