--- a/django_ngq/ngq_app/static/ngq_app/styles.css
+++ b/django_ngq/ngq_app/static/ngq_app/styles.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     background-color: white;
     color: #06151b;
 }
@@ -12,11 +12,24 @@ body {
 nav {
     width: 100%;
     position: fixed;
-    background: black;
-    padding: 20px 40px;
+    top: 0;
+    padding: 20px 50px;
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
+    z-index: 1000;
+    backdrop-filter: blur(10px);
+}
+.logo {
+    display: flex;
+    align-items: center;
+}
+.circle {
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    border-radius: 10%;
+    margin: 0px 5px 0px 50px;
 }
 nav .logo a{
     font-weight: 600;
@@ -24,8 +37,8 @@ nav .logo a{
 nav ul {
     list-style: none;
     display: flex;
-    gap: 25px;
-    margin: 0;
+    gap: 30px;
+    margin-right: 60px;
     padding: 0;
 }
 nav a {
@@ -45,10 +58,9 @@ nav a:hover {
     justify-content: flex-start;
     height: 100vh;
     text-align: left;
-    padding: 0px 50px;
+    padding: 0px 80px;
     gap: 30px;
-    
-    background: white;
+    background: linear-gradient(135deg, #0d1f5e, #388186);
 }
 /*left*/
 .hero-content {
@@ -62,47 +74,48 @@ nav a:hover {
 }
 .hero h1 {
     font-size: 56px;
-    font-weight: 700;
-    color: black;
+    font-weight: 600;
+    color: white;
     margin: 0px 0px 25px;
 }
 .hero h2 {
-    font-size: 20px;
-    font-weight: 200;
-    color: black;
+    font-size: 18px;
+    font-weight: 100;
+    color: white;
 }
 .hero p {
     font-size: 18px;
     margin-bottom: 20px;
 }
 .hero .input-container {
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     align-items: center;
-    gap: 10px;
-    width: 100%;
-    justify-items: left;
+    width: 70%;
+    gap: 15px;
+    margin-top: 10px;
 }
 .hero input {
     padding: 10px;
     font-size: 16px;
+    /* width: 100%; */
+    max-width: 80%;
     border: 1px solid #ccc;
-    border-radius: 10px;
+    border-radius: 15px;
     text-align: center;
-    width: 50px;
 }
 .hero button {
-    padding: 10px 20px;
+    padding: 15px 50px;
     font-size: 16px;
-    background-color: black;
-    color: white;
+    background-color: #ffd600;
+    color: black;
     border: none;
-    border-radius: 10px;
+    border-radius: 15px;
     cursor: pointer;
 }
 .hero button:hover {
-    background: #e8e8e8;
-    color: black;
+    background: black;
+    color: #ffd600;
 }
 /*input*/
 form{
@@ -112,18 +125,18 @@ form{
     gap: 10px;
 }
 input[type=submit] {
-    padding: 10px 20px;
+    /* padding: 15px 50px; */
     font-size: 16px;
-    background-color: black;
-    color: white;
+    background-color: #ffd600;
+    color: black;
     border: none;
-    border-radius: 10px;
+    border-radius: 15px;
     cursor: pointer;
-    width: 20%;
+    width: 50%;
 }
 input[type=submit]:hover {
-    background: #e8e8e8;
-    color: black;
+    background: black;
+    color: #ffd600;
 }
 /*right*/
 .hero-image {
@@ -144,13 +157,14 @@ input[type=submit]:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 100px 50px 60px;
-    background: white;
-    color: black;
+    padding: 100px 50px 200px;
+    background: linear-gradient(135deg, #0d1f5e, #388186);
+    color: white;
 }
 .about h2 {
     font-size: 28px;
     font-weight: 700;
+    margin-top: 80px;
 }
 .about p {
     font-size: 18px;
@@ -179,17 +193,12 @@ input[type=submit]:hover {
 /*************************FAQ*************************/
 .faq {
     padding: 80px 150px;
-    background-color: white;
     text-align: center;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 50px;
-}
-.faq-item:last-child {
-    grid-column: span 2;
-}
-.faq-item:last-child p {
-    text-align: center;
+    background: linear-gradient(135deg, #0d1f5e, #388186);
+    color: white;
 }
 .faq h2 {
     text-align: center;
@@ -198,41 +207,47 @@ input[type=submit]:hover {
     grid-column: span 2;
 }
 .faq-item {
-    border: 1px solid #ddd;
+    border: 1px solid rgba(255, 255, 255, 0.5);
     padding: 20px;
     border-radius: 10px;
-    background: #f9f9f9;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.05);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+}
+.faq-item:last-child {
+    grid-column: span 2;
+    padding-bottom: 40px;
+}
+.faq-item:last-child p {
+    text-align: center;
 }
 .faq-item h4 {
     text-align: center;
     font-size: 20px;
     font-weight: 600;
+    color: #f0f0f0;
 }
 .faq-item p {
     text-align: left;
     font-size: 17px;
     line-height: 1.6;
     margin: 0;
-}
-.faq-item:last-child p {
-    text-align: center;
+    color: #ddd;
 }
 .faq-item a {
-    color: #005a72;
+    color: #f8f8f8;
     text-decoration: none;
     font-weight: 500;
 }
 .faq-item:hover {
-    border: 1px solid #4f7c7c;
-    background: #f1f8f8;
+    border: 1px solid #ffffff;
 }
 .faq-item a:hover {
-    color: #003d4d;
+    color: white;
     text-decoration: underline;
 }
 
 /*************************LOADING SCREEN*************************/
+/* [LEGACY] [UNUSED] */
 /* loading spinner test */
 .loading {
     display: flex;
@@ -267,7 +282,7 @@ input[type=submit]:hover {
 
 /*************************RESULTS*************************/
 main.results {
-    /*background:linear-gradient(90deg, #A5E9E1, #388186);*/
+    background: #225072;
     padding: 50px;
     min-height: calc(100vh - 140px);
     display: flex;
@@ -279,32 +294,36 @@ main.results {
     gap: 20px;
     padding: 60px 20px 20px;
 }
-/* left column */
+/*left*/
 .info {
     flex: 1;
-    background: #f8f8f8;
     padding: 15px 25px;
     border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
     margin-bottom: 15px;
     font-size: 16px;
+    color: white;
+    background: rgba(255, 255, 255, 0.15);
 }
-/* right column */
+/*right*/
 .test-case-summary {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: white;
 }
 .generated-count {
-    font-size: 50px;
+    font-size: 60px;
     font-weight: bold;
     line-height: 1;
     margin: 30px 0px 0px;
+    color: white;
 }
 .test-case-text {
     font-size: 16px;
     font-weight: 600;
+    color: white;
 }
 .action-buttons {
     display: flex;
@@ -312,64 +331,156 @@ main.results {
     margin-top: 30px;
 }
 .action-buttons button {
-    padding: 10px 15px;
+    padding: 8px 15px;
     font-size: 16px;
-    color: #06151b;
-    border: 1px solid #06151b;
-    background: white;
+    color: white;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    background: rgba(255, 255, 255, 0.15);
     border-radius: 5px;
     cursor: pointer;
+    transition: all 0.3s ease;
 }
 .action-buttons button:hover {
-    background-color: #06151b;
-    color: white;
+    background: #0d1f5e;
+    border: 1px solid #0d1f5e;
 }
-/* summary */
 .summary {
     font-size: 16px;
     margin: 0;
+    color: white;
 }
-/* table */
+/*table*/
 .table-container {
+    overflow-x: auto;
+    color: white;
+}
+div {
+    width: 100%;
     overflow-x: auto;
 }
 table {
+    width: 100%;
     border-collapse: separate;
     border-spacing: 0;
-    border-radius: 10px;
+    border: none;
     overflow: hidden;
-    width: 100%;
-    border: 1px solid #ccc;
-}
-th, td {
-    border: 1px solid #ddd;
-    padding: 10px;
-    text-align: left;
+    table-layout: fixed;
+    word-wrap: break-word;
 }
 th {
-    background-color: #f4f4f4;
+    background-color: rgba(255, 255, 255, 0.15);
+    color: white;
     font-weight: bold;
+    padding: 14px;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.4);
+}
+td {
+    padding: 12px;
+    color: white;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: transparent;
+    vertical-align: top;
+}
+table tr:nth-child(even) td {
+    background: rgba(255, 255, 255, 0.07);
 }
 table th:first-child {
     border-top-left-radius: 10px;
+    width:15%;
+}
+table th:nth-child(2){
+    width:5%;
+}
+table th:nth-child(3){
+    width:15%;
+}
+table th:nth-child(4){
+    width:15%;
+}
+table th:nth-child(5){
+    width:25%;
+}
+table th:nth-child(6){
+    width:15%;
 }
 table th:last-child {
     border-top-right-radius: 10px;
+    width:10%;
 }
 table tr:last-child td:first-child {
     border-bottom-left-radius: 10px;
+    overflow: hidden;
 }
 table tr:last-child td:last-child {
     border-bottom-right-radius: 10px;
+    overflow: hidden;
 }
 
 /*************************FOOTER*************************/
 footer {
-    margin-top: auto; 
-    padding-bottom: 5px;
-    background: black;
-    border-top: 1px solid #ccc;
-    text-align: center;
-    font-size: 14px;
-    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    line-height: 0.1;
+}
+
+/*tablet, mobile*/
+@media (max-width: 768px) {
+    .features {
+        flex-direction: column; 
+        gap: 60px;
+    }
+    .feature {
+        max-width: 100%;
+    }
+
+    .hero {
+        flex-direction: column;
+        text-align: center;
+        padding: 150px 20px;
+    }
+    .hero-content {
+        max-width: 100%;
+    }
+    .hero-image {
+        max-width: 100%;
+        padding-top: 0;
+    }
+    .hero h2{
+        font-size: 14px;
+    }
+    .hero input {
+        width: 50%; 
+    }
+    .hero .input-container {
+        width: 80%;
+    }
+
+    .about {
+        flex-direction: column;
+        text-align: center;
+        padding: 10% 10%;
+    }
+    .about-content {
+        max-width: 100%;
+    }
+    .about-image {
+        max-width: 100%;
+    }
+
+    .faq {
+        display: flex;
+        flex-direction: column;
+        padding: 15% 10% 10% 10%;
+        gap: 30px;
+    }
+
+    .header-row {
+        flex-direction: column;
+    }
+
+    .results-content {
+        flex-direction: column;
+    }
 }
