--- a/django_ngq/ngq_app/templates/ngq_app/faq.html
+++ b/django_ngq/ngq_app/templates/ngq_app/faq.html
@@ -13,6 +13,7 @@
     <!-- Navigation -->
     <nav>
         <div class="logo">
+            <span class="circle"></span> <!--logo placeholder-->
             <a href="/">Next-Gen QA</a>
         </div>
         <ul>
