--- a/django_ngq/ngq_app/templates/ngq_app/pdf_template.html
+++ b/django_ngq/ngq_app/templates/ngq_app/pdf_template.html
@@ -23,7 +23,7 @@
         
         /*************************RESULTS*************************/
         main.results {
-            /*background:linear-gradient(90deg, #A5E9E1, #388186);*/
+            background: #225072;
             padding: 50px;
             min-height: calc(100vh - 140px);
             display: flex;
@@ -90,17 +90,23 @@
             overflow-x: auto;
         }
         table {
+            width: 100%;
             border-collapse: separate;
             border-spacing: 0;
             border-radius: 10px;
             overflow: hidden;
             width: 100%;
             border: 1px solid #ccc;
+            table-layout: fixed;
+            word-wrap: break-word;
         }
         th, td {
             border: 1px solid #ddd;
             padding: 10px;
             text-align: left;
+        }
+        td  {
+            vertical-align: top;
         }
         th {
             background-color: #f4f4f4;
@@ -108,9 +114,26 @@
         }
         table th:first-child {
             border-top-left-radius: 10px;
+            width:15%;
+        }
+        table th:nth-child(2){
+            width:10%;
+        }
+        table th:nth-child(3){
+            width:15%;
+        }
+        table th:nth-child(4){
+            width:15%;
+        }
+        table th:nth-child(5){
+            width:20%;
+        }
+        table th:nth-child(6){
+            width:15%;
         }
         table th:last-child {
             border-top-right-radius: 10px;
+            width:10%;
         }
         table tr:last-child td:first-child {
             border-bottom-left-radius: 10px;
@@ -132,12 +155,21 @@
     </style>
 </head>
 <body>
+    <!-- Navigation -->
+    <nav>
+        <div class="logo">
+            <span class="circle"></span> <!--logo placeholder-->
+            <h3>Next-Gen QA</h3>
+        </div>
+    </nav>
+
     <!-- Results Section -->
     <main class="results">
         <div class="results-content">
             <!-- Left column -->
             <div class="info">
                 <p><strong>Test cases generated for:</strong> <span id="test-url">{{url}}</span></p>
+                <p><strong>Generated {{test_case_count}} / {{elements_count}} testcases</strong>
                 <p><strong>Total Elements Identified:</strong> <span id="total-elements">{{accurate_elements_count}}</span></p>
                 <ul id="breakdown-list">
                     <li>Buttons: <span id="buttons-count">{{category_count.0}}</span></li>
@@ -147,13 +179,6 @@
                     <li>Submit Fields: <span id="submit-fields-count">{{category_count.4}}</span></li>
                     <li>Inputs Fields: <span id="input-fields-count">{{category_count.5}}</span></li>
                 </ul>
-            </div>
-
-            <!-- Right column-->
-            <div class="test-case-summary">
-                <p class="generated-count">
-                    <span id="test-case-progress">{{test_case_count}}</span> / <span id="test-case-total">{{elements_count}}</span>
-                </p>
             </div>
         </div>
 
