script.js separation

--- a/django_ngq/ngq_app/templates/ngq_app/static_results.html
+++ b/django_ngq/ngq_app/templates/ngq_app/static_results.html
@@ -79,8 +79,8 @@
         <p>&copy; 2024 Next-Gen QA | All Rights Reserved</p>
     </footer>
 
-    <!-- <script src="{% static 'ngq_app/script.js'%}"></script> -->
-    <script>
+    <script src="{% static 'ngq_app/script.js'%}"></script>
+    <!-- <script>
         //// BUTTONS ////
         // click download pdf button
         document.getElementById("print-btn").addEventListener("click", () => {
@@ -101,6 +101,6 @@
         document.getElementById("new-url-btn").addEventListener("click", () => {
             window.open("/");
         });
-    </script>
+    </script> -->
 </body>
 </html>
