--- a/django_ngq/ngq_app/templates/ngq_app/results.html
+++ b/django_ngq/ngq_app/templates/ngq_app/results.html
@@ -28,31 +28,31 @@
             <!-- Left column -->
             <!-- Loading... or double curly brackets-->
             <div class="info">
-                <p><strong>Test cases generated for:</strong> <span id="test-url"></span></p>
-                <p><strong>Total Elements Identified:</strong> <span id="total-elements"></span></p>
+                <p><strong>Test cases generated for:</strong>...<span id="test-url"></span></p>
+                <p><strong>Total Elements Identified:</strong>0<span id="total-elements"></span></p>
                 <ul id="breakdown-list">
-                    <li>Buttons: <span id="buttons-count"></span></li>
-                    <li>Links: <span id="links-count"></span></li>
-                    <li>Headers: <span id="headers-count"></span></li>
-                    <li>Paragraphs: <span id="paragraphs-count"></span></li>
-                    <li>Submit Fields: <span id="submit-fields-count"></span></li>
-                    <li>Inputs Fields: <span id="input-fields-count"></span></li>
+                    <li>Buttons: <span id="buttons-count"></span>0</li>
+                    <li>Links: <span id="links-count"></span>0</li>
+                    <li>Headers: <span id="headers-count"></span>0</li>
+                    <li>Paragraphs: <span id="paragraphs-count"></span>0</li>
+                    <li>Submit Fields: <span id="submit-fields-count">0</span></li>
+                    <li>Inputs Fields: <span id="input-fields-count">0</span></li>
                 </ul>
             </div>
 
             <!-- Right column-->
             <div class="test-case-summary">
                 <p class="generated-count">
-                    <span id="test-case-progress"></span> / <span id="test-case-total"></span>
+                    <span id="test-case-progress">0</span> / <span id="test-case-total">0</span>
                 </p>
                 <!-- scraping website... | generating test cases... | generation completed! -->
                 <p id="generation-status">scraping website...</p>
-                <div class="action-buttons">
+                <!-- <div class="action-buttons">
                     <button id="print-btn">Print</button>
                     <button id="download-btn">Download CSV</button>
                     <button id="regenerate-btn">Regenerate</button>
                     <button id="new-url-btn">New URL</button>
-                </div>
+                </div> -->
             </div>
         </div>
 
@@ -77,28 +77,28 @@
         <p>&copy; 2024 Next-Gen QA | All Rights Reserved</p>
     </footer>
 
-    <!-- <script src="{% static 'ngq_app/script.js'%}"></script> -->
-    <script>
-        //// BUTTONS ////
-        // click download pdf button
-        document.getElementById("print-btn").addEventListener("click", () => {
-            window.open("/download_pdf");
-        });
+    <script src="{% static 'ngq_app/script.js'%}"></script>
+    <!-- <script>
+        // //// BUTTONS ////
+        // // click download pdf button
+        // document.getElementById("print-btn").addEventListener("click", () => {
+        //     window.open("/download_pdf");
+        // });
 
-        // click download button
-        document.getElementById("download-btn").addEventListener("click", () => {
-            window.open("/download");
-        });
+        // // click download button
+        // document.getElementById("download-btn").addEventListener("click", () => {
+        //     window.open("/download");
+        // });
 
-        // click regenerate button
-        document.getElementById("regenerate-btn").addEventListener("click", () => {
-            window.open("/results");
-        });
+        // // click regenerate button
+        // document.getElementById("regenerate-btn").addEventListener("click", () => {
+        //     window.open("/results");
+        // });
 
-        // click new url button
-        document.getElementById("new-url-btn").addEventListener("click", () => {
-            window.open("/");
-        });
+        // // click new url button
+        // document.getElementById("new-url-btn").addEventListener("click", () => {
+        //     window.open("/");
+        // });
 
         //// FETCH / ASYNC FUNCTIONS ////
         // Scraping
@@ -203,6 +203,6 @@
         //     });
         // }
         // const tabID = generateUUID();
-    </script>
+    </script> -->
 </body>
 </html>
