--- a/front-end components/styles.css
+++ b/front-end components/styles.css
@@ -121,7 +121,7 @@ nav a:hover {
     max-width: 50%;
     display: flex;
     justify-content: center;
-    padding-top: 100px;
+    padding-top: 10px;
 }
 .hero-image img {
     max-width: 80%;
@@ -134,14 +134,15 @@ nav a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 100px 50px 200px;
+    padding: 0px 50px;
     background: linear-gradient(135deg, #0d1f5e, #388186);
     color: white;
+    min-height: 100vh;
 }
 .about h2 {
     font-size: 28px;
     font-weight: 700;
-    margin-top: 80px;
+    margin-top: 50px;
 }
 .about p {
     font-size: 18px;
@@ -342,6 +343,7 @@ footer {
     justify-content: center;
     height: auto;
     line-height: 0.1;
+    margin-top: auto;
 }
 
 /*tablet, mobile*/
@@ -379,7 +381,7 @@ footer {
     .about {
         flex-direction: column;
         text-align: center;
-        padding: 10% 10%;
+        padding: 15% 10% 10% 10%;
     }
     .about-content {
         max-width: 100%;
