--- a/django_ngq/ngq_app/templates/ngq_app/about.html
+++ b/django_ngq/ngq_app/templates/ngq_app/about.html
@@ -30,7 +30,7 @@
         </div>
         
         <div class="about-image">
-            <img src="temp.gif" alt="Next-Gen QA in action" class="about-gif">
+            <img src="{% static 'ngq_app/temp.gif'%}" alt="Next-Gen QA in action" class="about-gif">
         </div>
     </section>
 
