--- a/django_ngq/ngq_app/templates/ngq_app/home.html
+++ b/django_ngq/ngq_app/templates/ngq_app/home.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="hero-image">
-            <img src="temp.gif" alt="Next-Gen QA in action" class="hero-gif">
+            <img src="{% static 'ngq_app/temp.gif'%}" alt="Next-Gen QA in action" class="hero-gif">
         </div>
     </section>
 
