--- a/django_ngq/ngq_app/templates/ngq_app/faq.html
+++ b/django_ngq/ngq_app/templates/ngq_app/faq.html
@@ -58,7 +58,7 @@
 
         <div class="faq-item">
             <h4>Have more questions or suggestions?</h4>
-            <p>We’d love to hear from you! Reach out to us at <a href="mailto:nextgen@gmail.com">nextgen@gmail.com</a>.</p>
+            <p>We’d love to hear from you! Reach out to us at <a href="mailto:nextgenqa.info@gmail.com">nextgenqa.info@gmail.com</a>.</p>
         </div>
     </section>
 
